--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "node src/index",
-    "server": "nodemon src/index"
+    "server": "nodemon src/index",
+    "dev": "nodemon src/index",
+    "prod": "node src/index",
+    "client": "cd ../ && npm start --prefix client",
+    "devstack": "concurrently -k \"npm run dev\" \"npm run client\"",
+    "prodstack": "concurrently -k \"npm run prod\" \"npm run client\""
   },
   "author": "farah",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.7"
   }
 }
