--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.15.5",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
